RESOLVED FIXED85802
Web Inspector: Hangup when continuously changing a css width value in Inspector
https://bugs.webkit.org/show_bug.cgi?id=85802
Summary Web Inspector: Hangup when continuously changing a css width value in Inspector
Alexander Pavlov (apavlov)
Reported 2012-05-07 07:08:41 PDT
Reported against Chromium: URL : http://einstufungstest.dw.de/index.php?id=4 1. Go to http://einstufungstest.dw.de/index.php?id=4 2. Right Mouse click on the Webpage and go to the Element Properties 3. Click on the div element "tx_dwlanguagetest_content" 4. Go to Matches CSS Rules and Change the value "width" of the css class "tx_dwlanguagetest_content" with double click on it and press up or down keys 5. Google Crome Render Prozess getting Crazy and take all the cpu time Upstreaming http://code.google.com/p/chromium/issues/detail?id=113620
Attachments
Patch (1.92 KB, patch)
2012-05-07 07:17 PDT, Alexander Pavlov (apavlov)
no flags
Archive of layout-test-results from ec2-cr-linux-03 (6.04 MB, application/zip)
2012-05-07 07:48 PDT, WebKit Review Bot
no flags
Patch (6.33 KB, patch)
2012-05-25 10:11 PDT, Alexander Pavlov (apavlov)
vsevik: review+
Alexander Pavlov (apavlov)
Comment 1 2012-05-07 07:17:13 PDT
WebKit Review Bot
Comment 2 2012-05-07 07:48:20 PDT
Comment on attachment 140524 [details] Patch Attachment 140524 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12644173 New failing tests: inspector/styles/styles-new-API.html
WebKit Review Bot
Comment 3 2012-05-07 07:48:33 PDT
Created attachment 140527 [details] Archive of layout-test-results from ec2-cr-linux-03 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-03 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Alexander Pavlov (apavlov)
Comment 4 2012-05-07 08:05:22 PDT
(In reply to comment #2) > (From update of attachment 140524 [details]) > Attachment 140524 [details] did not pass chromium-ews (chromium-xvfb): > Output: http://queues.webkit.org/results/12644173 > > New failing tests: > inspector/styles/styles-new-API.html Seems to be a glitch testing against the red tree, since it passes locally, and this test is not present in the attached test results.
Pavel Feldman
Comment 5 2012-05-10 06:29:53 PDT
Comment on attachment 140524 [details] Patch This way we get out of memory. Could you instead address the performance bug via optimizing the style editing code?
Alexander Pavlov (apavlov)
Comment 6 2012-05-25 10:11:21 PDT
Vsevolod Vlasov
Comment 7 2012-05-25 10:18:56 PDT
Comment on attachment 144091 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=144091&action=review > Source/WebCore/inspector/InspectorStyleSheet.cpp:661 > + prefix.resize(0); Please use clear() instead. > Source/WebCore/inspector/InspectorStyleSheet.cpp:666 > + prefix.resize(0); Ditto.
Alexander Pavlov (apavlov)
Comment 8 2012-05-25 10:27:09 PDT
Note You need to log in before you can comment on or make changes to this bug.