Web Inspector: Hangup when continuously changing a css width value in Inspector https://bugs.webkit.org/show_bug.cgi?id=85802

Reviewed by Vsevolod Vlasov.

Source/WebCore:

An error in the property whitespace prefix detection algorithm would append the previous line trailing whitespace,
thereby enormously increasing the actual prefix during multiple incremental property changes.

* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyle::newLineAndWhitespaceDelimiters):

LayoutTests:

* inspector/styles/styles-formatting-expected.txt:
* inspector/styles/styles-formatting.html:

git-svn-id: svn://svn.chromium.org/blink/trunk@118538 bbb929c8-8fbe-4397-9dbb-9b2b20218538